; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_nt_io.c_ext2_last_winerror.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_nt_io.c_ext2_last_winerror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_SEVERITY_ERROR = common dso_local global i32 0, align 4
@FACILITY_STORAGE = common dso_local global i32 0, align 4
@LastWinError = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ext2_last_winerror(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @ERROR_SEVERITY_ERROR, align 4
  %4 = load i32, i32* @FACILITY_STORAGE, align 4
  %5 = call i32 @FAC(i32 %4)
  %6 = or i32 %3, %5
  %7 = load i32, i32* @LastWinError, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @LastWinError, align 4
  br label %13

11:                                               ; preds = %1
  %12 = load i32, i32* %2, align 4
  br label %13

13:                                               ; preds = %11, %9
  %14 = phi i32 [ %10, %9 ], [ %12, %11 ]
  %15 = or i32 %6, %14
  ret i32 %15
}

declare dso_local i32 @FAC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
